--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 <body>
+    <div id="button-div" class="col-xs-12">
+        
+    </div>
 
+    <div class="col-xs-12 col-sm-4 pull-right">
+        <form>
+            <label class="col-xs-12">Add an aquatic animal</label>
+            <input type="text" id="animal" class="col-xs-12">
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+
+    <div id="gif-div" class="col-xs-12 col-sm-8 pull-left">
+        
+    </div>
 </body>
 </html>
